@@ -600,3 +600,5 @@
 	* Updated 'INSTALL'.
 	* Updated 'NEWS'.
 	* Incremented the package version to 0.17.1.
+2018-03-08 Fred Gleason <fredg@paravelsystems.com>
+	* Modified 'symetertest' to use peak values only in the meters.
